blue.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-blue
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: web-blue
      version: v1
  replicas: 3
  template:
    metadata:
      labels:
        app: web-blue
        version: v1
    spec:
      containers:
        - name: web
          image: 20152282/nginx:v1
          ports:
          - containerPort: 80


---

apiVersion: v1
kind: Service
metadata: 
  name: service-blue
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector: 
    app: web-blue
    version: v1
  type: LoadBalancer
