web.yaml



apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: web
  replicas: 3
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      containers:
        - name: web
          image: 20152282/nginx:v1
          ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata: 
  name: service-canary
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector: 
    app: web 
  type: LoadBalancer



# kubectl apply -f web.yaml
