IngressWithHttps.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-app
  labels:
    app: nginx
  annotations:
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:950816194501:certificate/2174ee1c-82ec-4f7d-8646-cfa7175da737
    alb.ingress.kubernetes.io/ssl-redirect: '443' 
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /index.html    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  ingressClassName: my-ingress-class 
  defaultBackend:
    service:
      name: service-canary 
      port:
        number: 80   


#alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
#alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:950816194501:certificate/2174ee1c-82ec-4f7d-8646-cfa7175da737
#alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)    
#alb.ingress.kubernetes.io/ssl-redirect: '443'  

#For more to find annotations:

# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.4/guide/ingress/annotatiAons/

#For installation of AWS LoadBalancer controller:

# https://docs.aws.amazon.com/eks/latest/userguide/aws-load-balancer-controller.html
